# node-binary-parser

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.ts  jest.config.js  main.cpp  main.h  package-lock.json  package.json  tsconfig.json  typedoc.json
docs/: globals.html  index.html  modules.html
docs/assets/: search.js
docs/assets/js/: search.js
docs/interfaces/: BinaryParser.html  _index_.binaryparser.html  _index_.bitsoptions.html  _index_.reorder.html
docs/modules/: _index_.html
src/: BinaryParser.ts  index.ts
test/: index.test.ts
